fixed overflow on contact form

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -118,6 +118,7 @@
 
   form {
     gap: 16px !important;
+    overflow: visible !important;
   }
 
   input {
